[package]
name = "trender"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Simple graphics library for the terminal"
homepage = "https://github.com/Forged-Dyslexic/trender"
documentation = "https://github.com/Forged-Dyslexic/trender/wiki"
repository = "https://github.com/Forged-Dyslexic/trender"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
crossterm = "0.22.0"
terminal_size = "0.3.0"
