[package]
name = "trender"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Simple graphics library for the terminal"
homepage = "https://github.com/Forged-Dyslexic/trender"
documentation = "https://github.com/Forged-Dyslexic/trender/wiki"
repository = "https://github.com/Forged-Dyslexic/trender"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
serde_json = "1.0.138"
crossterm = "0.28.1"
terminal_size = "0.4.1"
